Agregar Equipo funciona con id cliente

--- a/src/main/resources/templates/listado.html
+++ b/src/main/resources/templates/listado.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 <h2 align="center">LISTADO DE EQUIPOS</h2>
+<br>
+<a th:href="@{/agregarEquipo}" >Agregar Equipo</a>
     <div align="center">
       <table border="1">
           <thead>
