--- a/src/main/resources/templates/listado.html
+++ b/src/main/resources/templates/listado.html
@@ -6,8 +6,12 @@
 </head>
 <body>
 <h2 align="center">LISTADO DE EQUIPOS</h2>
+
+<br>
+<a th:href="@{/dot}" >Ir a Inicio</a>
 <br>
 <a th:href="@{/agregarEquipo}" >Agregar Equipo</a>
+
     <div align="center">
       <table border="1">
           <thead>
