Proceso con fechas exitoso

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,6 +10,7 @@
 <div>
     <div><a th:href="@{/listadoEquipos}">Listado de Equipos</a></div>
     <div><a th:href="@{/agregarEquipo}">Agregar Equipo</a></div>
+    <div><a th:href="@{/listadoEventos}">Listado de Eventos</a></div>
     <div><a th:href="@{/agregarEvento}">Agregar Evento</a></div>
 </div>
 </body>
