trae ultima lectura contador/Fecha

--- a/src/main/resources/templates/listaEventos.html
+++ b/src/main/resources/templates/listaEventos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Listado Eventos</title>
@@ -10,7 +10,7 @@
 <br>
 <a th:href="@{/dot}" >Ir a Inicio</a>
 <br>
-<a th:href="@{/agregarEquipo}" >Agregar Equipo</a>
+<a th:href="@{/agregarEvento}" >Agregar Evento</a>
 
     <div align="center">
       <table border="1">
