--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
-<html lang="es" xmlns:th="http://www.w3.org/1999/xhtml">
-<head>
+<html lang="es" xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/layout}">
+
+
+<head th:replace="~{layout/layout :: head}">
     <meta charset="UTF-8">
     <title>DOT inicio</title>
+
 </head>
 <body>
 
-<h1>APLICACION DOT</h1>
+
+<div class="container-fluid" layout:fragment="page-content">
+
+</div>
 <div>
     <div><a th:href="@{/listadoEquipos}">Listado de Equipos</a></div>
     <div><a th:href="@{/agregarEquipo}">Agregar Equipo</a></div>
@@ -14,4 +22,5 @@
     <div><a th:href="@{/agregarEvento}">Agregar Evento</a></div>
 </div>
 </body>
+
 </html>
