--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Simple Sidebar - Start Bootstrap Template</title>
+    <title>DOT - Documax</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" th:href="@{../assets/favicon.ico}" />
     <!-- Core theme CSS (includes Bootstrap)-->
@@ -16,14 +16,14 @@
 <div class="d-flex" id="wrapper">
     <!-- Sidebar-->
     <div class="border-end bg-white" id="sidebar-wrapper">
-        <div class="sidebar-heading border-bottom bg-light">Start Bootstrap</div>
+        <div class="sidebar-heading border-bottom bg-light">Documax</div>
         <div class="list-group list-group-flush">
             <a class="list-group-item list-group-item-action list-group-item-light p-3" th:href="@{/listadoEquipos}">Lista Equipos</a>
             <a class="list-group-item list-group-item-action list-group-item-light p-3" th:href="@{/listadoEventos}">Lista Eventos</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Overview</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Events</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Profile</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Status</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" th:href="@{/listadoContratos}">Lista Contratos</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Libre</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Libre</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Libre</a>
         </div>
     </div>
     <!-- Page content wrapper-->
@@ -32,7 +32,9 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
             <div class="container-fluid">
                 <button class="btn btn-primary" id="sidebarToggle">Menu</button>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
                         <li class="nav-item active"><a class="nav-link" th:href="@{/dot}">Inicio</a></li>
@@ -50,7 +52,6 @@
                 </div>
             </div>
         </nav>
-        <h1>APLICACION DOT DOCUMAX</h1>
         <!-- Page content-->
         <div class="container-fluid" layout:fragment="page-content">
             <h1>APLICACION DOT DOCUMAX</h1>
