--- a/src/main/resources/templates/listadoEquipos.html
+++ b/src/main/resources/templates/listadoEquipos.html
@@ -13,11 +13,10 @@
 
 
 <div class="container-fluid" layout:fragment="page-content">
-    <h2 align="center">LISTADO DE EQUIPOS</h2>
+    <h2>LISTADO DE EQUIPOS</h2>
 
-    <a th:href="@{/agregarEquipo}" >Agregar Equipo</a>
-
-    <div align="center" class="container my-2">
+    <a th:href="@{/agregarEquipo}"  class="btn btn-primary">Agregar Equipo</a>
+    <div class="container my-2">
         <table class="table table-striped table-hover">
             <thead>
             <th>id</th>
