--- a/src/main/resources/templates/newEventoForm.html
+++ b/src/main/resources/templates/newEventoForm.html
@@ -13,19 +13,18 @@
 
 
 <div class="container-fluid" layout:fragment="page-content">
-    <br>
-    <a th:href="@{/dot}" >Ir a Inicio</a>
-    <br>
-    <h1>Guardar Evento</h1>
+    <div class="container my-2">
+        <h1>Guardar Evento</h1>
 
-    <form action="#" th:action="@{/guardarEvento}" th:object="${newEvento}" method="POST">
-        <input type="text" th:field="*{equipo}" placeholder="Equipo id" >
-        <input type="date" th:field="*{fechaEvento}" placeholder="Fecha dd/MM/yyyy" >
-        <input type="text" th:field="*{contadorTotal}" placeholder="Contador" >
-        <input type="text" th:field="*{tipoEvento}" placeholder="Tipo Evento" >
-        <input type="text" th:field="*{detalle}" placeholder="Detalle" >
-        <button type="submit">Guardar Evento</button>
-    </form>
+        <form action="#" th:action="@{/guardarEvento}" th:object="${newEvento}" method="POST">
+            <input type="text" th:field="*{equipo}" placeholder="Equipo id" >
+            <input type="date" th:field="*{fechaEvento}" placeholder="Fecha dd/MM/yyyy" >
+            <input type="text" th:field="*{contadorTotal}" placeholder="Contador" >
+            <input type="text" th:field="*{tipoEvento}" placeholder="Tipo Evento" >
+            <input type="text" th:field="*{detalle}" placeholder="Detalle" >
+            <button type="submit">Guardar Evento</button>
+        </form>
+    </div>
 </div>
 
 
