--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -18,10 +18,10 @@
     <div class="border-end bg-white" id="sidebar-wrapper">
         <div class="sidebar-heading border-bottom bg-light">Documax</div>
         <div class="list-group list-group-flush">
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" th:href="@{/listadoEquipos}">Lista Equipos</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" th:href="@{/listadoEventos}">Lista Eventos</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" th:href="@{/listadoContratos}">Lista Contratos</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Libre</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" th:href="@{/listadoEquipos}">Equipos</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" th:href="@{/listadoEventos}">Eventos</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" th:href="@{/listadoContratos}">Contratos</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" th:href="@{/listadoClientes}">Clientes</a>
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Libre</a>
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Libre</a>
         </div>
